--- a/src/docker/docker-compose.yml
+++ b/src/docker/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.6'
 services:
   custompios:
     image: guysoft/custompios:devel
-    container_name: ${DISTRO_NAME}-build
+    container_name: photonvision-build
     tty: true
     restart: always
     privileged: true
